--- a/social/templates/social/base.html
+++ b/social/templates/social/base.html
@@ -1,115 +1,194 @@
 <!doctype html>
-<html>
+
+<html lang="en">
   <head>
+    <title>Development</title>
     <meta charset="utf-8">
-    <title>{% block title %} Home {% endblock %}</title>
-    {% load static %}
-    {% load tags %}
-    {% block stylesheet %}{% endblock %}
-    <link rel="stylesheet" type="text/css" href="{% static 'social/style.css' %}">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script>
-      var postToken = '{{ csrf_token }}'
-      var postEditToken = '{{ csrf_token }}'
-      var commentToken = '{{ csrf_token }}'
-      var commentEditToken = '{{ csrf_token }}'
-      var profileChangeToken = '{{ csrf_token }}'
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <title>React to-do list</title>
   </head>
-  
-  
-  
   <body>
-    <main>
-      <div style="display:none;" id="page">base</div>
-      {% block content %}
-      {% endblock %}
-      
-      <!-- here comes the beginning of post list -->
-      <ul id="posts">
-      <div style="display:none;" id="currentpost">{{ latest_post.pk }}</div>
-      {% for post in latest_posts_list %}
-      <li id="post{{ post.pk }}"><div class="main" id="post_text{{ post.pk }}">{{ post.post_text }}</div>
-        {% if post.image %} <img src="{{ post.image.url }}" alt="post-image{{ post.pk }}">{% endif %}
-        <div class="sub">Posted by <a href="{% url 'social:user' post.user.pk %}">{{ post.user.username }}</a> at {{ post.get_readable_date }}</div><br>
-        
-        <img class="main" alt="like" src="{% static 'icons/thumbs-up.svg' %}" onclick="like({{ post.pk }}, '{{ csrf_token }}')">
-        <div id="total_likes{{ post.pk }}" class="like">{% total_likes post %}</div>
-        
-        <img class="main" alt="dislike" src="{% static 'icons/thumbs-down.svg' %}" onclick="dislike({{ post.pk }}, '{{ csrf_token }}')">
-        <div id="total_dislikes{{ post.pk }}" class="dislike">{% total_dislikes post %}</div>
-        
-        {% if post.user == user %}
-        
-        <img class="main" src="{% static 'icons/pencil-alt.svg' %}" onclick="toggleVisibility('edit{{ post.pk }}');">
-        <img class="main" alt="delete" src="{% static 'icons/trash-alt.svg' %}" onclick="toggleVisibility('delete{{ post.pk }}');">
-        
-        <span class="changenone" id="delete{{ post.pk }}"><strong class="stronger">Delete the post?</strong><button class="coolButton" onclick="deletePost({{ post.pk }})">Yes, delete it.</button></span>
-        
-        <span class="changenone" id="edit{{ post.pk }}">
-          <form onsubmit="editPost({{ post.pk }})">
-            <label for="edit-field">New text:</label>
-            <input type="text" name="new_text" placeholder="Edit here" id="edit-field" maxlength="2500" minlength="1" value="{{ post.post_text }}" required="">
-            {{ editform.id.as_hidden }}
-            <input type="submit" value="Edit">
-          </form>
-        </span>
-        {% endif %}
-        
-        <span class="extrapadding" id="comment_in_reply{{ post.pk }}">
-          <form onsubmit="commentInReply({{ post.pk }})">
-            {{ commentform }}
-            <input type="submit" value="comment">
-          </form>
-        </span>
-        
-        
-        
-        <ul id="comment_section{{ post.pk }}">
-          <div style="display:none;" id="currentcomment">{{ post.comment_set.all.last.pk }}</div>
-          {% for comment in post.comment_set.all %}
+    <div id="root"></div>
+    <script>function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}</script>
+    <script type="text/babel">
+    
 
-          <li class="{% if comment.in_reply_to_comment %}inreply{% else %}comment{% endif %}" id="comment{{ comment.pk }}"><div class="comment" id="comment_text{{ comment.pk }}">{{ comment }}</div><img class="reply" alt="down" src="{% static 'icons/arrow-down.svg' %}" onclick="toggleVisibility('comment_in_reply{{ comment.pk }}');">
-          
-          {% if comment.posted_by == user %}
-          <img class="reply" alt="delete" src="{% static 'icons/trash-alt.svg' %}" onclick="toggleVisibility('delete_comment{{ comment.pk }}');">
-          <img class="reply" src="{% static 'icons/pencil-alt.svg' %}" onclick="toggleVisibility('edit_comment{{ comment.pk }}');">
-          
-          <span class="changenone" id="delete_comment{{ comment.pk }}"><strong class="stronger">Delete the comment? </strong><button class="coolButton" onclick="deleteComment({{ comment.pk }})">Yes, delete it.</button></span>
-          
-          <span class="changenone" id="edit_comment{{ comment.pk }}">
-            <form onsubmit="editComment({{ comment.pk }})">
-              <label for="edit-field">New text:</label>
-              <input type="text" name="new_text" placeholder="Edit here" id="edit-field" maxlength="2500" minlength="1" value="{{ comment }}" required="">
-              {{ editform.id.as_hidden }}
-              <input type="submit" value="edit">
-            </form>
-          </span>
-          
-          {% endif %}          
-          
-          <span class="changenone" id="comment_in_reply{{ comment.pk }}">
-            <form onsubmit="commentInReply({{ post.pk }}, {{ comment.pk }})">
-              {{ commentform }}
-              <input type="hidden" id="in_reply_to_user{{ comment.pk }}" value="{{ comment.posted_by.pk }}">
-              <input type="hidden" id="in_reply_to_comment{{ comment.pk }}" value="{{ comment.pk }}">
-              <input type="submit" value="reply">
-            </form>
-          </span>
-          
-          <div class="commentsub"> commented by <a href="{% url 'social:user' comment.posted_by.pk %}">{{ comment.posted_by }}</a>{% if comment.in_reply_to_comment %} in reply to <a href="{% url 'social:user' comment.in_reply_to_user %}">{{ comment.get_user }}</a>'s <a href="{% url 'social:showcomment' comment.in_reply_to_comment %}">comment</a> {% endif %}<br><small>Posted at  {{ comment.get_readable_date }}</small></div>
-          </li>
-          {% endfor %} <!-- end of the comment list -->
-        </ul>
-        
-      {% endfor %} <!-- end of the post list -->
-      
-      </ul>
-    </main>
+class WritePostForm extends React.Component {
+  constructor(){
+    super()
+    this.state = {
+      value: '',
+    }
+    this.handleChange = this.handleChange.bind(this);
+  }
+  
+  handleChange(event) {
+    this.setState({value: event.target.value});
+  }
+
+  handleSubmit = event =>{
+    event.preventDefault();
+    const url ="/ajax/post/"
+    const csrftoken = getCookie('csrftoken')
+    const data = { 'post_text':this.state.value }
+    fetch(url, { method: 'POST',
+    body: JSON.stringify(data),
+    headers: { 'Content-Type': 'application/json', 'X-CSRFToken': csrftoken  }
+    })
+    .then(response => {
+      if (response.status !== 201) {
+        console.log('something went terribly wrong'); 
+      }
+      else {
+        console.log('success');
+      }
+    })
+  }
+  
+  render() {
+    return (
+      <form onSubmit={this.handleSubmit}>
+        <label>
+          Write post:
+          <input type="text" value={this.state.value} onChange={this.handleChange} />
+        </label>
+        <input type="submit" value="Submit" />
+      </form>
+    );
+  }
+}    
+
+
+
+
+class WriteCommentForm extends React.Component {
+  constructor(props){
+    super(props);
+    this.state = {
+      value: '',
+    }
+    this.handleChange = this.handleChange.bind(this);
+  }
+  
+  handleChange(event) {
+    this.setState({value: event.target.value});
+  }
+  
+  handleSubmit = event =>{
+    event.preventDefault();
+    const url ="/ajax/comment/"
+    const csrftoken = getCookie('csrftoken')
+    const data = { 'comment':this.state.value, 'post':this.props.id }
+    if (this.props.in_reply_to_comment && this.props.in_reply_to_user){
+      const data = { 'comment': this.state.value, 'post': this.props.id, 'in_reply_to_comment': this.props.in_reply_to_comment, 'in_reply_to_user': this.props.in_reply_to_user }
+    }
+    fetch(url, { method: 'POST',
+    body: JSON.stringify(data),
+    headers: { 'Content-Type': 'application/json', 'X-CSRFToken': csrftoken  }
+    })
+    .then(response => {
+      if (response.status !== 201) {
+        console.log('something went terribly wrong'); 
+      }
+      else {
+        console.log('success');
+      }	
+    })
+  }
+  
+  render() {
+    return (
+      <form onSubmit={this.handleSubmit}>
+        <label>
+          Comment:
+          <input type="text" value={this.state.value} onChange={this.handleChange} />
+        </label>
+        <input type="submit" value="Submit" />
+      </form>
+    );
+  }
+}
+
+
+function GetComments(props) {
+  fetch('/ajax/retrievecomments/'+this.props.id+'/')
+    .then(response => {
+      if (response.status !== 200) {
+        return "Something went terribly wrong.";
+      }
+      return response.json();
+    })
+    .then(data => { return data });
+}
+
+
+
+class App extends React.Component {
+  constructor(){
+    super()
+    this.state = {
+      posts: [],
+      comments: []	,
+      placeholder: 'No posts here!',
+    };
+    this.getPosts = this.getPosts.bind(this)
+  }
+  
+  getPosts() {
+    fetch('/ajax/retrieveposts/')
+      .then(response => {
+        if (response.status !== 200) {
+          return this.setState({ placeholder: "Something went terribly wrong." });
+        }
+        return response.json();
+      })
+      .then(data => this.setState({ posts: data }));
+  }
+  
+  componentDidMount(){
+    this.getPosts();
+  }
+  
+  render(){
+    return (
+    <div>
+      <WritePostForm />
+      <button onClick={this.getPosts}>View posts</button>
+      {this.state.posts.map(post => 
+        <div key={post.id} className="jumbotron">Post text: {post.post_text}
+        <br /><img src={post.image} />
+        <br />Posted by {post.user}
+        <br />Posted on {post.pub_date}
+        <WriteCommentForm id={post.id}/>
+        <GetComments id={post.id} />
+        <br /><br /><br /><br />
+        </div>
+      )}
+    </div>)
+  }
+}
+
+ReactDOM.render(<App />, document.getElementById('root'))
+
+    </script>
   </body>
-<script src="{% static 'social/basescript.js' %}"></script>
 </html>
-
-
-
-
