--- a/frontend/templates/frontend/app.html
+++ b/frontend/templates/frontend/app.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Django REST with React</title>
+    <title>Home</title>
   </head>
   <body>
-    <div id="app">
-    <!-- React will load here -->
-    </div>
+    <div id="app"></div>
   </body>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'social/style.css' %}">
