--- a/backend/static/social/style.css
+++ b/backend/static/social/style.css
@@ -49,7 +49,6 @@ body {
 
 .homecenter {
     margin: 0 auto;
-    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,12 +87,15 @@ ul {
     list-style-type: none;
 }
 
+.comment-separator {
+    border-top: 1.5px solid #44494a;
+}
+
 li.post {
-    width: 64.35%;
-    margin-left: 16.35%;
     padding: 10px 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    border-top: 1.5px solid #44494a;
 }
 
 li.comment {
